--- a/templates/index.html
+++ b/templates/index.html
@@ -17,3 +17,18 @@
 {% endwith %}
 
 <h1>Welcome!</h1>
+<html>
+    <body>
+        <p>Log in!
+          <form action="/setUID/" method="POST">
+            <input type="text" name="uid" placeholder="12">
+          </form>
+        </p>
+        
+        <p>Check out our pages!
+            <a href="/">Home</a>
+            <a href="/approved/">Events</a>
+            <a href="/messages/">Messages</a>
+        </p>
+    </body>
+</html>
