--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,5 +1,9 @@
 <!--Riann Tang-->
 <!doctype html>
+
+{% extends "index-base.html" %}
+{% block content %}
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -83,3 +87,5 @@
   
   </body>
 </html>
+
+{% endblock %}
