block content html

--- a/templates/events.html
+++ b/templates/events.html
@@ -1,7 +1,7 @@
 <!--Lauren Tso-->
 <!doctype html>
 
-{% extends "index-base.html" %}
+{% extends "index.html" %}
 {% block content %}
 
 <html lang='en'>
