--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,7 +1,7 @@
 <!--Riann Tang-->
 <!doctype html>
 
-{% extends "index-base.html" %}
+{% extends "index.html" %}
 {% block content %}
 
 <html>
@@ -11,23 +11,11 @@
     <meta name=description content="">
     <meta name=keywords content="">    
     <title>Messages!</title>
-    <!--<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">-->
-    <!--<link rel='stylesheet' href="{{url_for('static',filename='styling.css')}}">-->
+
   </head>
   <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <h1 class="title">Messaging!</h1>
-
-    <!--Display any flashed messages-->
-    <!--{% with messages = get_flashed_messages() %}-->
-    <!--    {% if messages %}-->
-    <!--        <div id="messages">-->
-    <!--        {% for fmsg in messages %}-->
-    <!--            <p>{{fmsg}}</p>-->
-    <!--        {% endfor %}-->
-    <!--        </div>-->
-    <!--    {% endif %}-->
-    <!--{% endwith %}-->
     
     <!--Section for displaying names of people with whom user has a message history-->
     <div id="allM"> 
