--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,10 @@
     {% endif %}
 {% endwith %}
 
+{% block content %}
+
 <h1>Welcome!</h1>
+
 <html>
     <body>
         <p>Log in!
@@ -31,4 +34,10 @@
             <a href="/messages/">Messages</a>
         </p>
     </body>
+    
+Lounge is a Whiptail database where current members and alumnae of the Wellesley 
+ultimate frisbee team can more easily connect for fundraising, networking, and 
+socializing.
+
+{% endblock %}
 </html>
