update userinfo format

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         
         <p>Check out our pages!
             <a href="/">Home</a>
-            <a href="/preferences/">Create a profile</a>
+            <a href="/createAccount/">Create a profile</a>
             <a href="/approved/">Events</a>
             <a href="/messages/">Messages</a>
         </p>
