final updates for draft

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <body>
         <p>Log in!
           <form action="/setUID/" method="POST">
-            <input type="text" name="uid" placeholder="12">
+            <input type="text" name="uid" placeholder="username">
           </form>
         </p>
         
