--- a/alpha/templates/index.html
+++ b/alpha/templates/index.html
@@ -33,6 +33,7 @@
             <a href="/createAccount/">Create a profile</a>
             <a href="/approved/">Events</a>
             <a href="/messages/">Messages</a>
+            <a href="/family/">Family</a>
         </p>
     </body>
     
