--- a/alpha/templates/family.html
+++ b/alpha/templates/family.html
@@ -7,3 +7,25 @@
 <title>Family</title>
 <body>
     
+    <h1>Family Trees</h1>
+
+    <table id="family-list">
+        <tr>
+            <th>Family Name</th>
+            <th>Member</th>
+            <th>Year</th>
+        </tr>
+        </tr>
+        {% for family in families %}
+            <tr class = "member" data-id="{{family.name}}">
+                <td class="fname">{{family.name}}</td>
+                <td class="name">{{family.uname}}</td>
+                <td class="year">{{family.classyear}}</td>
+            </tr>
+        {% endfor %}
+    </table>
+ 
+</body>
+</html>
+
+{% endblock %}
