--- a/alpha/templates/family.html
+++ b/alpha/templates/family.html
@@ -9,21 +9,26 @@
     
     <h1>Family Trees</h1>
 
-    <table id="family-list">
-        <tr>
-            <th>Family Name</th>
-            <th>Member</th>
-            <th>Year</th>
-        </tr>
-        </tr>
-        {% for family in families %}
-            <tr class = "member" data-id="{{family.name}}">
-                <td class="fname">{{family.name}}</td>
-                <td class="name">{{family.uname}}</td>
-                <td class="year">{{family.classyear}}</td>
+    {% for name in names %}
+        <table id="family-list">
+            <tr>
+                <th>Family Name</th>
+                <th>Member</th>
+                <th>Year</th>
             </tr>
-        {% endfor %}
-    </table>
+            </tr>
+            {% for family in families %}
+                {% if family.name == name %}
+                    <tr class = "member" data-id="{{family.name}}">
+                        <td class="fname">{{family.name}}</td>
+                        <td class="name">{{family.uname}}</td>
+                        <td class="year">{{family.classyear}}</td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        </table>
+        <br>
+    {% endfor %}
  
 </body>
 </html>
