--- a/alpha/templates/events.html
+++ b/alpha/templates/events.html
@@ -35,7 +35,9 @@
             <th>Country</th>
             <th>Description</th>
             <th>Date</th>
+            {% if submit %}
             <th>RSVPs</th>
+            {% endif %}
         </tr>
         </tr>
         {% for event in events %}
@@ -46,12 +48,14 @@
             <td class="country">{{event.country}}</td>
             <td class="description">{{event.description}}</td>
             <td class="date">{{event.edate}}</td>
+            {% if submit %}
             <td><span class="rsvps">{{event.rsvps}}</span></td>
             <td><form method="post" action="/rsvpEvent/">
                 <input type="hidden" name="name" value="{{event.ename}}">
                 <input type="hidden" name="date" value="{{event.edate}}">
                 <input type="submit" class = "rsvp" name="rsvp" value="RSVP">
             </form></td>
+            {% endif %}
             {% if approve %}
             <td><form method="post" action="/approveDeleteEvent/">
                 <input type="hidden" name="name" value="{{event.ename}}">
