--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,26 @@
 <!doctype html>
 
 <html lang='en'>
-
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel='stylesheet' href="{{url_for('static',filename='styling.css')}}">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 <title>Lounge</title>
+
 <body>
     
+<div class="header">
+    <a href="/"><img src="/static/logo.jpg" alt="Lounge Logo"></a>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/messages">Messages</a></li>
+      <li><a href="/approved">Events</a></li>
+      <li><a href="/donate">Donate</a></li>
+      <li><a href="/feedback">Feedback</a></li>
+    </ul>
+</div>
+
 <!--display all flashed messages-->
 {% with messages = get_flashed_messages() %}
     {% if messages %}
