--- a/alpha/templates/events.html
+++ b/alpha/templates/events.html
@@ -13,40 +13,22 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
     $( function() {
-        $( "#tabs" ).tabs();
+        $("#tabs").tabs();
     } );
     </script>
 </head>
 
 <body>
- 
- 
- 
-<form action="/submitEvent/" method="POST">
-    <fieldset>
-        <legend>Event Data</legend>
-        <table>
-            <tr><td><label for="name" accesskey="n"> Event Name *:</label></td><td><input type="text" name="name" id="name" placeholder="Millyfest"></td></tr>
-            <tr><td><label for="city" accesskey="c"> Event City:</label></td><td><input type="text" name="city" id="city" placeholder="Wellesley"></td></tr>
-            <tr><td><label for="state" accesskey="s"> Event State:</label></td><td><input type="text" name="state" id="state" placeholder="MA"></td></tr>
-            <tr><td><label for="country" accesskey="o"> Event Country:</label></td><td><input type="text" name="country" id="country" placeholder="US"></td></tr>
-            <tr><td><label for="desc" accesskey="d"> Event Description:</label></td><td><input type="text" name="desc" id="desc" placeholder="tourney"></td></tr>
-            <tr><td><label for="date" accesskey="a"> Event Date *:</label></td><td><input type="text" name="date" id="date" placeholder="2018-04-08"></td></tr>
-        </table>
-    </fieldset>
-    <p>
-        <input type='submit' value='Submit Event'>
-    </p>
-</form>
 
-<p>This button turns on/off all the JavaScript: <button id="progressive_enhancement">Turn On Progressive Enhancement</button>
-
+<div id = "progressive">
+    <p>This button turns on/off all the JavaScript: <button id="progressive_enhancement">Turn On Progressive Enhancement</button>
+</div>
 
 <div id="tabs">
-  <ul>
-    <li><a href="#tabs-1">Upcoming</a></li>
-    <li><a href="#tabs-2">Past</a></li>
-  </ul>
+    <ul>
+        <li><a href="#tabs-1">Upcoming</a></li>
+        <li><a href="#tabs-2">Past</a></li>
+      </ul>
     <div id="tabs-1">
         <table id="events-list">
             <tr>
@@ -88,8 +70,8 @@
         {% endfor %}
         </tr>
     </table>
-  </div>
-  <div id="tabs-2">
+    </div>
+    <div id="tabs-2">
         <table id="events-list">
         <tr>
             <th>Name</th>
@@ -112,14 +94,7 @@
             <td class="country">{{event.country}}</td>
             <td class="description">{{event.description}}</td>
             <td class="date">{{event.edate}}</td>
-            {% if submit %}
             <td><span class="rsvps">{{event.rsvps}}</span></td>
-            <td><form method="post" action="/rsvpEvent/">
-                <input type="hidden" name="name" value="{{event.ename}}">
-                <input type="hidden" name="date" value="{{event.edate}}">
-                <input type="submit" class = "rsvp" name="rsvp" value="RSVP">
-            </form></td>
-            {% endif %}
             {% if approve %}
             <td><form method="post" action="/approveDeleteEvent/">
                 <input type="hidden" name="name" value="{{event.ename}}">
@@ -130,13 +105,16 @@
             {% endif %}
         </tr>
         {% endfor %}
-        
-    </table>    
-  </div>
+        </table>    
+    </div>
+</div>
+ 
+<div id = "create-event-button">
+    <form method="post" action="/createEvent/">
+    <input type="submit" name="submit" value="Create Event!">
+    </form>
 </div>
 
- 
- 
 </body>
 </html>
 
@@ -180,5 +158,13 @@
             $.post(URL, {name: name.text(), date: date.text()}, updateRSVP) // send and retrieve rating information from jsonify
         }
     });
+    
+    $("#create-event-button").on('click', function() {
+        $("#tabs").hide();
+        $("#progressive").hide()
+        $("#create-event-button").hide()
+        $("#create-event").show()
+    });
+    
 </script>
 {% endblock %}
