--- a/alpha/templates/userinfo.html
+++ b/alpha/templates/userinfo.html
@@ -13,7 +13,7 @@
 <body>
 <h1>Create an Account</h1>
 
-<form action="/createAccount/" method="POST">
+<form action={{ url_for('newAccount') }} method="POST">
     <fieldset>
         <legend>Account Information</legend>
         <table>
