Linked messaging to feedback

--- a/alpha/templates/index.html
+++ b/alpha/templates/index.html
@@ -49,9 +49,10 @@
           <form action={{ url_for('setUID') }} method="POST">
             <input type="text" name="uid" placeholder="username">
     </body>
-Lounge is a Whiptail database where current members and alumnae of the Wellesley 
+
+<p></p>Lounge is a Whiptail database where current members and alumnae of the Wellesley 
 ultimate frisbee team can more easily connect for fundraising, networking, and 
-socializing.
+socializing.</p>
 
 {% endblock %}
 </html>
