last alpha commits

--- a/alpha/templates/index.html
+++ b/alpha/templates/index.html
@@ -11,13 +11,14 @@
 <body>
     
 <div class="header">
-    <a href="/"><img src="/static/logo.jpg" alt="Lounge Logo"></a>
+    <a href="/"><img class="header_img" src="/static/logo.jpg" alt="Lounge Logo"></a>
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/messages">Messages</a></li>
       <li><a href="/approved">Events</a></li>
       <li><a href="/donate">Donate</a></li>
       <li><a href="/feedback">Feedback</a></li>
+      <li><a href="/family">Family</a></li>
     </ul>
 </div>
 
