--- a/alpha/templates/events.html
+++ b/alpha/templates/events.html
@@ -8,7 +8,7 @@
 <html lang="en">
 <head>
     <title>Events</title>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
@@ -24,88 +24,64 @@
     <p>This button turns on/off all the JavaScript: <button id="progressive_enhancement">Turn On Progressive Enhancement</button>
 </div>
 
-<div id="tabs">
+<div id="tabs" style="background-color: white;">
     <ul>
         <li><a href="#tabs-1">Upcoming</a></li>
         <li><a href="#tabs-2">Past</a></li>
       </ul>
     <div id="tabs-1">
-        <table id="events-list">
-            <tr>
-                <th>Name</th>
-                <th>City</th>
-                <th>State</th>
-                <th>Country</th>
-                <th>Description</th>
-                <th>Date</th>
-                {% if submit %}
-                <th>RSVPs</th>
-                {% endif %}
-            </tr>
-            {% for event, id in up %}
-            <tr class = "event" data-id="{{id}}-{{event.edate}}">
-                <td class="name">{{event.ename}}</td>
-                <td class="city">{{event.city}}</td>
-                <td class="state">{{event.state}}</td>
-                <td class="country">{{event.country}}</td>
-                <td class="description">{{event.description}}</td>
-                <td class="date">{{event.edate}}</td>
-                {% if submit %}
-                <td><span class="rsvps">{{event.rsvps}}</span></td>
-                <td><form method="post" action="/rsvpEvent/">
-                    <input type="hidden" name="name" value="{{event.ename}}">
-                    <input type="hidden" name="date" value="{{event.edate}}">
-                    <input type="submit" class = "rsvp" name="rsvp" value="RSVP">
-                </form></td>
-                {% endif %}
-                {% if approve %}
-                <td><form method="post" action="/approveDeleteEvent/">
-                    <input type="hidden" name="name" value="{{event.ename}}">
-                    <input type="hidden" name="date" value="{{event.edate}}">
-                    <input type="submit" name="submit" value="Approve!">
-                    <input type="submit" name="submit" value="Delete!">
-                </form></td>
-                {% endif %}
-            </tr>
+        <div class="event-grid" style="display:grid; grid-template-columns:250px 250px 250px; padding:10px;
+                                       grid-column-gap: 10px; grid-row-gap: 15px;">
+        {% for event, id in up %}
+            <div id="event-card" data-id="{{id}}-{{event.edate}}" style="padding:20px; border: 1px solid rgba(0, 0, 0, 0.8);
+                                                                         text-align:left">
+                <div id="cover-photo">
+                    <img src="/static/event.png" style="max-width:100%">
+                </div>
+                <div class="info">
+                    <div class="name">{{event.ename}}</div>
+                    <div class="desc">{{event.description}}</div>
+                    <div class="date"><img src="/static/calendar.png" style="max-width:15%"> {{event.edate}}</div>
+                    <div class="location"><img src="/static/location.png" style="max-width:15%"> {{event.city}}, {{event.state}} {{event.country}}</div>
+                    <div class="rsvp">RSVPs: {{event.rsvps}}</div>
+                    <div class="more">
+                        <form method="post" action="/moreEvent/">
+                            <input type="hidden" name="name" value="{{event.ename}}">
+                            <input type="hidden" name="date" value="{{event.edate}}">
+                            <input type="submit" name="submit" value="More Info!">
+                        </form>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
-        </tr>
-    </table>
+        </div>
     </div>
-    <div id="tabs-2">
-        <table id="events-list">
-        <tr>
-            <th>Name</th>
-            <th>City</th>
-            <th>State</th>
-            <th>Country</th>
-            <th>Description</th>
-            <th>Date</th>
-            {% if submit %}
-            <th>RSVPs</th>
-            {% endif %}
-        </tr>
-        
-        </tr>
+    <div id="tabs-2" style="background-color: white;">
+        <div class="event-grid" style="display:grid; grid-template-columns:250px 250px 250px; padding:10px;
+                                       grid-column-gap: 10px; grid-row-gap: 15px;">
         {% for event, id in past %}
-        <tr class = "event" data-id="{{id}}-{{event.edate}}">
-            <td class="name">{{event.ename}}</td>
-            <td class="city">{{event.city}}</td>
-            <td class="state">{{event.state}}</td>
-            <td class="country">{{event.country}}</td>
-            <td class="description">{{event.description}}</td>
-            <td class="date">{{event.edate}}</td>
-            <td><span class="rsvps">{{event.rsvps}}</span></td>
-            {% if approve %}
-            <td><form method="post" action="/approveDeleteEvent/">
-                <input type="hidden" name="name" value="{{event.ename}}">
-                <input type="hidden" name="date" value="{{event.edate}}">
-                <input type="submit" name="submit" value="Approve!">
-                <input type="submit" name="submit" value="Delete!">
-            </form></td>
-            {% endif %}
-        </tr>
+            <div id="event-card" data-id="{{id}}-{{event.edate}}" style="padding:20px; border: 1px solid rgba(0, 0, 0, 0.8);
+                                                                         text-align:left">
+                <div id="cover-photo">
+                    <img src="/static/event.png" style="max-width:100%">
+                </div>
+                <div class="info">
+                    <div class="name">{{event.ename}}</div>
+                    <div class="desc">{{event.description}}</div>
+                    <div class="date"><img src="/static/calendar.png" style="max-width:15%"> {{event.edate}}</div>
+                    <div class="location"><img src="/static/location.png" style="max-width:15%"> {{event.city}}, {{event.state}} {{event.country}}</div>
+                    <div class="rsvp">RSVPs: {{event.rsvps}}</div>
+                    <div class="more">
+                        <form method="post" action="/moreEvent/">
+                            <input type="hidden" name="name" value="{{event.ename}}">
+                            <input type="hidden" name="date" value="{{event.edate}}">
+                            <input type="submit" name="submit" value="More Info!">
+                        </form>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
-        </table>    
+        </div>
     </div>
 </div>
  
@@ -157,13 +133,6 @@
             console.log('name is ' + name.text() + ' date is ' + date.text())
             $.post(URL, {name: name.text(), date: date.text()}, updateRSVP) // send and retrieve rating information from jsonify
         }
-    });
-    
-    $("#create-event-button").on('click', function() {
-        $("#tabs").hide();
-        $("#progressive").hide()
-        $("#create-event-button").hide()
-        $("#create-event").show()
     });
     
 </script>
