--- a/alpha/templates/events.html
+++ b/alpha/templates/events.html
@@ -20,10 +20,6 @@
 
 <body>
 
-<div id = "progressive">
-    <p>This button turns on/off all the JavaScript: <button id="progressive_enhancement">Turn On Progressive Enhancement</button>
-</div>
-
 <div id="tabs" style="background-color: white;">
     <ul>
         <li><a href="#tabs-1">Upcoming</a></li>
@@ -72,7 +68,7 @@
                     <div class="location"><img src="/static/location.png" style="max-width:15%"> {{event.city}}, {{event.state}} {{event.country}}</div>
                     <div class="rsvp">RSVPs: {{event.rsvps}}</div>
                     <div class="more">
-                        <form method="post" action="/moreEvent/">
+                        <form method="post" action="{{url_for('moreEvent')}}">
                             <input type="hidden" name="name" value="{{event.ename}}">
                             <input type="hidden" name="date" value="{{event.edate}}">
                             <input type="submit" name="submit" value="More Info!">
@@ -86,7 +82,7 @@
 </div>
  
 <div id = "create-event-button">
-    <form method="post" action="/createEvent/">
+    <form method="post" action="{{url_for('createEvent')}}">
     <input type="submit" name="submit" value="Create Event!">
     </form>
 </div>
@@ -94,46 +90,4 @@
 </body>
 </html>
 
-<script>
-    // toggle progressive enhancement on click
-    var progressive_on = false;
-    $("#progressive_enhancement").on('click', function () {
-        if(progressive_on) {
-          // turn it off
-           $("input[name=rsvp]").show(); 
-          $("#progressive_enhancement").text('Turn on Progressive Enhancement'); // change text of button
-           progressive_on = false; 
-        } 
-        else {
-          // turn it on
-           $("input[name=rsvp]").hide();
-          $("#progressive_enhancement").text('Turn off Progressive Enhancement'); // change text of button
-           progressive_on = true; 
-        }
-    });
-    
-    var URL = "{{url_for('rsvpEventAjax')}}"; // set URL for Ajax updating
-
-    function updateRSVP(obj) {
-        var $row = $("[data-id="+obj.eid+"-"+obj.date+"]"); 
-        console.log('row is ' + $row)
-        console.log('text is ' + $row.find(".rsvps").val())
-        $row.find(".rsvps").text(obj.rsvp); 
-    }
-    
-    // define action on clicking a rating
-    $("#events-list").on("click",".rsvps",function(event) {
-        if (!progressive_on) { // do not act if progressive enhancement is off
-            return
-        }
-        else { 
-            var $row = $(this).closest("tr");
-            var name = $row.find('.name');
-            var date = $row.find('.date');
-            console.log('name is ' + name.text() + ' date is ' + date.text())
-            $.post(URL, {name: name.text(), date: date.text()}, updateRSVP) // send and retrieve rating information from jsonify
-        }
-    });
-    
-</script>
 {% endblock %}
