typo in feedback

--- a/alpha/templates/feedback.html
+++ b/alpha/templates/feedback.html
@@ -6,7 +6,7 @@
 <title>Feedback</title>
     <body>
         <h1>Submit Feedback</h1>
-        <p>Have feedback about the site, questions about the team or some words of wisdeom? Submit them here!.</p>
+        <p>Have feedback about the site, questions about the team or some words of wisdom? Submit them here!</p>
         <p>Note: Required fields are denoted with a *</p>
         <form name="feedbackForm" action={{ url_for('submitFeedback') }} method="POST">
             <fieldset>
