--- a/alpha/templates/events.html
+++ b/alpha/templates/events.html
@@ -4,16 +4,25 @@
 {% extends "index.html" %}
 {% block content %}
 
-<!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
+<!doctype html>
+<html lang="en">
+<head>
+    <title>Events</title>
+    <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
     $( function() {
         $("#tabs").tabs();
     } );
-</script>
+    </script>
+</head>
 
 <body>
+
+<div id = "progressive">
+    <p>This button turns on/off all the JavaScript: <button id="progressive_enhancement">Turn On Progressive Enhancement</button>
+</div>
 
 <div id="tabs" style="background-color: white;">
     <ul>
@@ -36,21 +45,13 @@
                     <div class="location"><img src="/static/location.png" style="max-width:15%"> {{event.city}}, {{event.state}} {{event.country}}</div>
                     <div class="rsvp">RSVPs: {{event.rsvps}}</div>
                     <div class="more">
-                        <form method="post" action="{{url_for('moreEvent')}}">
+                        <form method="post" action="/moreEvent/">
                             <input type="hidden" name="name" value="{{event.ename}}">
                             <input type="hidden" name="date" value="{{event.edate}}">
                             <input type="submit" name="submit" value="More Info!">
                         </form>
                     </div>
                 </div>
-                {% if approve %}
-                <div class="approve"><form method="post" action="{{url_for('approveDeleteEvent')}}">
-                <input type="hidden" name="name" value="{{event.ename}}">
-                <input type="hidden" name="date" value="{{event.edate}}">
-                <input type="submit" name="submit" value="Approve!">
-                <input type="submit" name="submit" value="Delete!">
-                </form></div>
-            {% endif %}
             </div>
         {% endfor %}
         </div>
@@ -71,7 +72,7 @@
                     <div class="location"><img src="/static/location.png" style="max-width:15%"> {{event.city}}, {{event.state}} {{event.country}}</div>
                     <div class="rsvp">RSVPs: {{event.rsvps}}</div>
                     <div class="more">
-                        <form method="post" action="{{url_for('moreEvent')}}">
+                        <form method="post" action="/moreEvent/">
                             <input type="hidden" name="name" value="{{event.ename}}">
                             <input type="hidden" name="date" value="{{event.edate}}">
                             <input type="submit" name="submit" value="More Info!">
@@ -85,7 +86,7 @@
 </div>
  
 <div id = "create-event-button">
-    <form method="post" action="{{url_for('createEvent')}}">
+    <form method="post" action="/createEvent/">
     <input type="submit" name="submit" value="Create Event!">
     </form>
 </div>
@@ -93,4 +94,46 @@
 </body>
 </html>
 
+<script>
+    // toggle progressive enhancement on click
+    var progressive_on = false;
+    $("#progressive_enhancement").on('click', function () {
+        if(progressive_on) {
+          // turn it off
+           $("input[name=rsvp]").show(); 
+          $("#progressive_enhancement").text('Turn on Progressive Enhancement'); // change text of button
+           progressive_on = false; 
+        } 
+        else {
+          // turn it on
+           $("input[name=rsvp]").hide();
+          $("#progressive_enhancement").text('Turn off Progressive Enhancement'); // change text of button
+           progressive_on = true; 
+        }
+    });
+    
+    var URL = "{{url_for('rsvpEventAjax')}}"; // set URL for Ajax updating
+
+    function updateRSVP(obj) {
+        var $row = $("[data-id="+obj.eid+"-"+obj.date+"]"); 
+        console.log('row is ' + $row)
+        console.log('text is ' + $row.find(".rsvps").val())
+        $row.find(".rsvps").text(obj.rsvp); 
+    }
+    
+    // define action on clicking a rating
+    $("#events-list").on("click",".rsvps",function(event) {
+        if (!progressive_on) { // do not act if progressive enhancement is off
+            return
+        }
+        else { 
+            var $row = $(this).closest("tr");
+            var name = $row.find('.name');
+            var date = $row.find('.date');
+            console.log('name is ' + name.text() + ' date is ' + date.text())
+            $.post(URL, {name: name.text(), date: date.text()}, updateRSVP) // send and retrieve rating information from jsonify
+        }
+    });
+    
+</script>
 {% endblock %}
