--- a/alpha/templates/index.html
+++ b/alpha/templates/index.html
@@ -46,9 +46,37 @@
 
 <html>
     <body>
-        <p>Log in!
-          <form action={{ url_for('setUID') }} method="POST">
-            <input type="text" name="uid" placeholder="username">
+        <div id="login" style="width: 100%; overflow: hidden;">
+            <div id="log" style="width: 600px; float: left;">
+                <p>Log in!
+                <form action={{ url_for('loginuser') }} method="POST">
+                    <input type="text" name="uid" placeholder="username"><br>
+                    <input type="text" name="pwd" placeholder="password"><br>
+                    <input type="submit" id="submit" name="submit" value="Log In">
+                </form>
+            </div>
+            <div id="create" style="margin-left: 620px;">
+                <p>Don't have an account? Make one.
+                <form method="post" action="{{url_for('account')}}">
+                    <input type="submit" id="submit" name="submit" value="Create Account">
+                </form>
+                </p>
+            </div>
+            <div id="profile" style="margin-left: 620px;">
+                <p>Have an account? Update it.
+                <form method="post" action="{{url_for('completeProfile')}}"> 
+                    <input type="submit" id="submit" name="submit" value="Complete Profile">
+                </form>
+                </p>
+            </div>
+            <div id="logout" style="margin-left: 620px;">
+                <p>Wanna log out? Do it.
+                <form method="post" action="{{url_for('logout')}}"> 
+                    <input type="submit" id="submit" name="submit" value="Log Out">
+                </form>
+                </p>
+            </div>
+        </div>
     </body>
 
 <p></p>Lounge is a Whiptail database where current members and alumnae of the Wellesley 
