--- a/alpha/templates/events.html
+++ b/alpha/templates/events.html
@@ -20,11 +20,7 @@
 
 <body>
 
-<div id = "progressive">
-    <p>This button turns on/off all the JavaScript: <button id="progressive_enhancement">Turn On Progressive Enhancement</button>
-</div>
-
-<div id="tabs" style="background-color: white;">
+<div id="tabs">
     <ul>
         <li><a href="#tabs-1">Upcoming</a></li>
         <li><a href="#tabs-2">Past</a></li>
@@ -33,7 +29,8 @@
         <div class="event-grid" style="display:grid; grid-template-columns:250px 250px 250px; padding:10px;
                                        grid-column-gap: 10px; grid-row-gap: 15px;">
         {% for event, id in up %}
-            <div id="event-card" data-id="{{id}}-{{event.edate}}" style="padding:20px; border: 1px solid rgba(0, 0, 0, 0.8);
+            <div id="event-card" data-id="{{id}}-{{event.edate}}" style="background-color: white;padding:20px; 
+                                                                         border: 1px solid rgba(0, 0, 0, 0.8);
                                                                          text-align:left">
                 <div id="cover-photo">
                     <img src="/static/event.png" style="max-width:100%">
@@ -56,11 +53,12 @@
         {% endfor %}
         </div>
     </div>
-    <div id="tabs-2" style="background-color: white;">
+    <div id="tabs-2">
         <div class="event-grid" style="display:grid; grid-template-columns:250px 250px 250px; padding:10px;
                                        grid-column-gap: 10px; grid-row-gap: 15px;">
         {% for event, id in past %}
-            <div id="event-card" data-id="{{id}}-{{event.edate}}" style="padding:20px; border: 1px solid rgba(0, 0, 0, 0.8);
+            <div id="event-card" data-id="{{id}}-{{event.edate}}" style="background-color: white; padding:20px; 
+                                                                         border: 1px solid rgba(0, 0, 0, 0.8);
                                                                          text-align:left">
                 <div id="cover-photo">
                     <img src="/static/event.png" style="max-width:100%">
