--- a/alpha/templates/profile.html
+++ b/alpha/templates/profile.html
@@ -23,9 +23,11 @@
                     alert("Please input a message before sending!")
                 }
                 else {
-                    $.post(url, { receiver: person, message: message }, function(data) { // Send the message
-                        alert("Message sent!")
-                    });
+                    if (message != null) {
+                        $.post(url, { receiver: person, message: message }, function(data) { // Send the message
+                            alert("Message sent!")
+                        });
+                    }
                 }
             })
         </script>
