--- a/alpha/templates/index.html
+++ b/alpha/templates/index.html
@@ -62,7 +62,7 @@
                 </form>
                 </p>
             </div>
-            <div id="profile" style="margin-left: 620px;">
+            <div id="complete" style="margin-left: 620px;">
                 <p>Have an account? Update it.
                 <form method="post" action="{{url_for('completeProfile')}}"> 
                     <input type="submit" id="submit" name="submit" value="Complete Profile">
