--- a/alpha/templates/feedback.html
+++ b/alpha/templates/feedback.html
@@ -15,7 +15,7 @@
                     <tr><td><label for="username">Username:</label></td><td><input type="text" name="username" id="username" placeholder="Your username"></td></tr>
                     <tr><td><label for="date">Date:</label></td><td><input type="text" name="date" id="date" placeholder="YYYY-MM-DD"></td></tr>
                     <tr><td><label for="subject">Subject:</label></td><td><input type="text" name="subject" id="subject" placeholder="Subject of your message"></td></tr>
-                    <tr><td><label for="message">Message:*</label></td><td><input type="text" name="message" id="message" placeholder="Your message"></td></tr>
+                    <tr><td><label for="message">Message:*</label></td><td><textarea rows="4" cols="50" name="message" id="message" placeholder="Let us know what you think!"></textarea></td></tr>
                 </table>
             </fieldset>
             <p>
