--- a/alpha/templates/profile.html
+++ b/alpha/templates/profile.html
@@ -12,8 +12,15 @@
                 <input type="hidden" name="uname" value={{basic.username}}>
             </form>
             <button type="button" class="msg-person">Message {{basic.nickname}}</button>
+            <div id="complete">
+            {% if isSelf %}
+            <form method="post" action="{{url_for('completeProfile')}}"> 
+                <input type="submit" id="submit" name="submit" value="Update Profile">
+            </form>
+            </p>
+            {% endif %}
         </div>
-        
+        </div>
         <script>
             $(".msg-person").click(function() {
                 var person = userForm.elements["uname"].value;
