--- a/alpha/templates/moreinfo.html
+++ b/alpha/templates/moreinfo.html
@@ -7,7 +7,7 @@
     <fieldset>
         <legend>Personal Information</legend>
         <table>
-            <tr><td><label for="name"> Name:</label></td><td><input type="text" name="name" id="name"></td></tr>
+            <tr><td><label for="name"> Name:*</label></td><td><input type="text" name="name" id="name"></td></tr>
             <tr><td><label for="nickname"> Nickname:</label></td><td><input type="text" name="nickname" id="nickname"></td></tr>
             <tr><td><label for="phnum"> Phone number:</label></td><td><input type="text" name="phnum" id="phnum"></td></tr>
             <tr><td><label for="year"> Class year:</label></td><td><input type="text" name="year" id="year"></td></tr>
