--- a/alpha/templates/profile.html
+++ b/alpha/templates/profile.html
@@ -60,15 +60,15 @@
             {% if npermiss %}
                 <div id="industry">
                     <h2>Industry</h2>
-                    <p>Login to view this info</p>
+                    <p>This info hidden</p>
                 </div>
                 <div id="team">
                     <h2>Team</h2>
-                    <p>Login to view this info</p>
+                    <p>This info hidden</p>
                 </div>
                 <div id="contact">
                     <h2>Contact Info</h2>
-                    <p>Login to view this info</p>
+                    <p>This info hidden</p>
                 </div>
             {% endif %}
         </div>
